Correct hints for redirect hostname on Firefox
On Chrome, the options page's developer tools will show activity from the background task, but not on Firefox. So now, the hints for getting redirect target are different depending on whether the Chrome implementation of the background script or the Firefox one is running.

--- a/src/Styles/md-style.css
+++ b/src/Styles/md-style.css
@@ -93,6 +93,15 @@
 }
 
 /* styles for options page */
+#md-options {
+    max-width: 6in;
+}
+
+#md-options:not(.md-chrome) .md-display-chrome,
+#md-options:not(.md-firefox) .md-display-firefox {
+    display: none;
+}
+
 input#md-hostname {
     width: 50ch;
 }
